--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "Fauzy",
   "license": "ISC",
   "description": "API Cek Ongkir",
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
